--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ExternalLoginDemo;Integrated Security=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ExternalLoginDemo;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Facebook": {
+      "AppId": "Your Facebook App Id",
+      "AppSecret": "Your Facebook App Secret"
+    },
+    "Google": {
+      "ClientId": "Your Google Client Id",
+      "ClientSecret": "Your Google Client Secret"
+    }
+  }
 }
